apps/etherpad/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: etherpad
  namespace: default
  labels:
    app: etherpad
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: etherpad
  template:
    metadata:
      labels:
        app: etherpad
    spec:
      containers:
      - name: etherpad
        image: etherpad/etherpad:3
        resources:
          requests:
            cpu: 50m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        ports:
        - containerPort: 9001
        volumeMounts:
        - mountPath: /opt/etherpad-lite/var
          name: etherpad-data
      tolerations:
      - key: "maintenance"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 30
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      volumes:
      - name: etherpad-data
        persistentVolumeClaim:
          claimName: etherpad-data
