apps/etherpad/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etherpad
  namespace: default
spec:
  selector:
    app: etherpad
  ports:
  - name: http
    port: 9001
    targetPort: 9001
