apps/etherpad/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: etherpad
  namespace: default
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - etherpad.lab.emc2.build
    secretName: etherpad-letsencrypt-tls
  rules:
  - host: etherpad.lab.emc2.build
    http:
      paths:
      - backend:
          service:
            name: etherpad
            port:
              number: 9001
        path: /
        pathType: Prefix
